--- a/sculptures.html
+++ b/sculptures.html
@@ -12,12 +12,13 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
     <title>Colette O'Beirne</title>
 </head>
+
 <heading>
     <section>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xs-12">
-                    <h3>Colette </br>O'Beirne </br> Studio</h3>
+                    <h3 id="title-heading">Colette </br>O'Beirne </br> Studio</h3>
                 </div>
             </div>
         </div>
@@ -25,55 +26,29 @@
     <section>
         <nav class="navbar navbar-default">
             <div class="container-fluid">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html">Information</a></li>
-                    <li><a href="sculptures.html">Sculptures</a></li>
-                    <li><a href="music.html">Music</a></li>
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="index.html">Colette O'Beirne Studio</a>
+                </div>
+                <ul class="nav navbar-nav justify-content-center">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">Information</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="sculptures.html">Sculptures</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="music.html">Music</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#">Contact</a>
+                    </li>
                 </ul>
             </div>
         </nav>
     </section>
 </heading>
 
-<body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-xs-4">
-                <article>
-                    <section>
-                        Lorem ipsum dolor sit amet.
-                    </section>
-                </article>
-            </div>
-            <div class="col-xs-8">
-                <article>
-                    <section>
-                        Lorem ipsum dolor sit amet.
-                    </section>
-                </article>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-xs-4">
-                <article>
-                    <section>
-                        Lorem ipsum dolor sit amet.
-                    </section>
-                </article>
-            </div>
-            <div class="col-xs-8">
-                <article>
-                    <section>
-                        Lorem ipsum dolor sit amet.
-                    </section>
-                </article>
-            </div>
-        </div>
-    </div>
 
-</body>
 
 <footer>
     <div>
