added bootstrap grid to images page and added contact form

--- a/music.html
+++ b/music.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,10 +43,29 @@
         </nav>
     </section>
 </heading>
+
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12">
+                
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/oMMb1Cjz0BQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+               
+            </div>
+            <div class="col-xs-12">
+                One full width colum for embedded videos
+            </div>
+            <div class="col-xs-12">
+                One full width colum for embedded videos
+            </div>
+            <div class="col-xs-12">
+                One full width colum for embedded videos
+            </div>
+            <div class="col-xs-12">
+                One full width colum for embedded videos
+            </div>
+            <div class="col-xs-12">
+                One full width colum for embedded videos
             </div>
         </div>
     </div>
@@ -68,7 +88,6 @@
             </div>
         </div>
         <link rel="stylesheet" href="#" type="text/css" />
-
     </div>
 </footer>
 
