--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
     <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-10">
                     <h3 id="title-heading">Colette </br>O'Beirne </br> Studio</h3>
                 </div>
             </div>
         </div>
     </section>
     <section>
+
         <nav class="navbar navbar-default justify-content-center">
             <div class="container-fluid">
                 <ul class="nav navbar-nav justify-content-center">
@@ -33,19 +34,18 @@
                         <a class="nav-link" href="sculptures.html">Sculptures</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Music.html">Music</a>
+                        <a class="nav-link" href="music.html">Music</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </section>
 </heading>
-
 <body>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div id="upper-sidebar" class="col-xs-4">
                 <article>
