--- a/sculptures.html
+++ b/sculptures.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +11,6 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
     <title>Colette O'Beirne</title>
 </head>
-
 <heading>
     <section>
         <div class="container-fluid">
@@ -46,59 +44,78 @@
 </heading>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4">
-                One of three columns
-            </div>
-            <div class="col-sm-4">
-                One of three columns
-            </div>
-            <div class="col-sm-4">
-                One of three columns
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4">
-                One of three columns
-            </div>
-            <div class="col-sm-4">
-                One of three columns
-            </div>
-            <div class="col-sm-4">
-                One of three columns
+    <div class="row">
+        <div class="col-xs-4">
+            <div class="thumbnail">
+                <a href="#">
+                    <img src="./images/IMG_4879.JPG" alt="bull sculpture" style="width:100%"></img>
+                </a>
+                <div class="caption">
+                    <p>Lorem ipsum...</p>
+                </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-4">
-                One of three columns
+        <div class="col-xs-4">
+            <div class="thumbnail">
+                <a href="#">
+                    <img src="./images/IMG_4879.JPG" alt="bull sculpture" style="width:100%"></img>
+                </a>
+                <div class="caption">
+                    <p>Lorem ipsum...</p>
+                </div>
             </div>
-            <div class="col-sm-4">
-                One of three columns
+        </div>
+           <div class="row">
+        <div class="col-xs-4">
+            <div class="thumbnail">
+                <a href="#">
+                    <img src="./images/IMG_4879.JPG" alt="bull sculpture" style="width:100%"></img>
+                </a>
+                <div class="caption">
+                    <p>Lorem ipsum...</p>
+                </div>
             </div>
-            <div class="col-sm-4">
-                One of three columns
+        </div>
+               <div class="row">
+        <div class="col-xs-4">
+            <div class="thumbnail">
+                <a href="#">
+                    <img src="./images/IMG_4879.JPG" alt="bull sculpture" style="width:100%"></img>
+                </a>
+                <div class="caption">
+                    <p>Lorem ipsum...</p>
+                </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-4">
-                One of three columns
-            </div>
-            <div class="col-sm-4">
-                One of three columns
-            </div>
-            <div class="col-sm-4">
-                One of three columns
+        <div class="col-xs-4">
+            <div class="thumbnail">
+                <a href="#">
+                    <img src="./images/IMG_4879.JPG" alt="bull sculpture" style="width:100%"></img>
+                </a>
+                <div class="caption">
+                    <p>Lorem ipsum...</p>
+                </div>
             </div>
         </div>
-    </div>
+        <div class="row">
+        <div class="col-xs-4">
+            <div class="thumbnail">
+                <a href="#">
+                    <img src="./images/IMG_4879.JPG" alt="bull sculpture" style="width:100%"></img>
+                </a>
+                <div class="caption">
+                    <p>Lorem ipsum...</p>
+                </div>
+            </div>
+        </div>
 </body>
 <footer>
     <div>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xs-4">
-
                 </div>
                 <div class="col-xs-8">
                     <a href="www.facebook.com"><i class="fab fa-facebook"></i></a>
@@ -112,5 +129,4 @@
         <link rel="stylesheet" href="#" type="text/css" />
     </div>
 </footer>
-
 </html>
