other new changes

--- a/music.html
+++ b/music.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Srisakdi" rel="stylesheet">
     <title>Colette O'Beirne</title>
 </head>
 <heading>
@@ -17,33 +18,36 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xs-12">
-                    <h3 id="title-heading">Colette </br>O'Beirne </br> Studio</h3>
+                    <a href="index.html">
+                        <h3 id="title-heading" class="text-center">Colette </br>O'Beirne </br> Studio</h3>
+                    </a>
                 </div>
             </div>
         </div>
     </section>
     <section>
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <ul class="nav navbar-nav justify-content-center">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Information</a>
+        <div class="row">
+            <div class="col-xs-12 col-xs-offset-4">
+            <div class="container-fluid" id="navcontainer">
+                <ul id="primary-nav-bar">
+                    <li>
+                        <a href="index.html">Information</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="sculptures.html">Sculptures</a>
+                    <li>
+                        <a href="sculptures.html">Sculptures</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="music.html">Music</a>
+                    <li>
+                        <a href="music.html">Music</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Contact</a>
+                    <li>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
-        </nav>
+        </div>
+        </div>
     </section>
 </heading>
-
 <body>
     <div class="container-fluid">
         <div class="row">
@@ -75,19 +79,17 @@
     <div>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-4">
-
-                </div>
-                <div class="col-xs-8">
-                    <a href="www.facebook.com"><i class="fab fa-facebook"></i></a>
-                    <a href="www.twitter.com"><i class="fab fa-twitter"></i></a>
-                    <a href="www.instagram.com"><i class="fab fa-instagram"></i></a>
-                    <a href="www.linkedin.com"><i class="fab fa-linkedin"></i></a>
-                    <a href="www.youtube.com"><i class="fab fa-youtube"></i></a>
+                <div class="col-xs-6 col-xs-offset-3">
+                    <p class="icons">
+                        <a href="www.facebook.com"><i class="fab fa-facebook"></i></a>
+                        <a href="www.twitter.com"><i class="fab fa-twitter"></i></a>
+                        <a href="www.instagram.com"><i class="fab fa-instagram"></i></a>
+                        <a href="www.linkedin.com"><i class="fab fa-linkedin"></i></a>
+                        <a href="www.youtube.com"><i class="fab fa-youtube"></i></a>
+                    </p>
                 </div>
             </div>
         </div>
-        <link rel="stylesheet" href="#" type="text/css" />
     </div>
 </footer>
 
