--- a/sculptures.html
+++ b/sculptures.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Srisakdi" rel="stylesheet">
     <title>Colette O'Beirne</title>
 </head>
 <heading>
@@ -16,97 +18,89 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xs-12">
-                    <h3 id="title-heading">Colette </br>O'Beirne </br> Studio</h3>
+                    <a href="index.html">
+                        <h3 id="title-heading" class="text-center">Colette </br>O'Beirne </br> Studio</h3>
+                    </a>
                 </div>
             </div>
         </div>
     </section>
     <section>
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <ul class="nav navbar-nav justify-content-center">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Information</a>
+        <div class="row">
+            <div class="col-xs-12 col-xs-offset-4">
+            <div class="container-fluid" id="navcontainer">
+                <ul id="primary-nav-bar">
+                    <li>
+                        <a href="index.html">Information</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="sculptures.html">Sculptures</a>
+                    <li>
+                        <a href="sculptures.html">Sculptures</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="music.html">Music</a>
+                    <li>
+                        <a href="music.html">Music</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Contact</a>
+                    <li>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
-        </nav>
+        </div>
+        </div>
     </section>
 </heading>
-
 <body>
-    <div class="row">
-        <div class="col-xs-4">
-            <div class="thumbnail">
-                <a href="#">
+    <div id="GalleryGrid">
+        <div class="row">
+            <div class="col-xs-4">
+                <div class="thumbnail">
+                    <a href="#">
                     <img src="./images/IMG_4879.JPG" alt="bull sculpture" style="width:100%"></img>
                 </a>
-                <div class="caption">
-                    <p>Lorem ipsum...</p>
+                    <div class="caption">
+                        <p>"Bull"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-4">
+                <div class="thumbnail">
+                    <a href="#">
+                    <img src="./images/IMG_3040.jpg" alt="eagle sculpture" style="width:100%"></img>
+                </a>
+                    <div class="caption">
+                        <p>"Eagle"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-4">
+                <div class="thumbnail">
+                    <a href="#">
+                    <img src="./images/IMG_0541_face0.jpg" alt="face sculpture" style="width:100%"></img>
+                </a>
+                    <div class="caption">
+                        <p>"Desultory Devil"</p>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="row">
-        <div class="col-xs-4">
-            <div class="thumbnail">
-                <a href="#">
-                    <img src="./images/IMG_4879.JPG" alt="bull sculpture" style="width:100%"></img>
+            <div class="col-xs-4">
+                <div class="thumbnail">
+                    <a href="#">
+                    <img src="./images/IMG_0494_face0.jpg" alt="face sculpture" style="width:100%"></img>
                 </a>
-                <div class="caption">
-                    <p>Lorem ipsum...</p>
+                    <div class="caption">
+                        <p>"Samuel Beckett"</p>
+                    </div>
                 </div>
             </div>
-        </div>
-           <div class="row">
-        <div class="col-xs-4">
-            <div class="thumbnail">
-                <a href="#">
-                    <img src="./images/IMG_4879.JPG" alt="bull sculpture" style="width:100%"></img>
+            <div class="col-xs-4">
+                <div class="thumbnail">
+                    <a href="#">
+                    <img src="./images/IMG_0228_1024.jpg" alt="horse sculpture" style="width:100%"></img>
                 </a>
-                <div class="caption">
-                    <p>Lorem ipsum...</p>
-                </div>
-            </div>
-        </div>
-               <div class="row">
-        <div class="col-xs-4">
-            <div class="thumbnail">
-                <a href="#">
-                    <img src="./images/IMG_4879.JPG" alt="bull sculpture" style="width:100%"></img>
-                </a>
-                <div class="caption">
-                    <p>Lorem ipsum...</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-        <div class="col-xs-4">
-            <div class="thumbnail">
-                <a href="#">
-                    <img src="./images/IMG_4879.JPG" alt="bull sculpture" style="width:100%"></img>
-                </a>
-                <div class="caption">
-                    <p>Lorem ipsum...</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-        <div class="col-xs-4">
-            <div class="thumbnail">
-                <a href="#">
-                    <img src="./images/IMG_4879.JPG" alt="bull sculpture" style="width:100%"></img>
-                </a>
-                <div class="caption">
-                    <p>Lorem ipsum...</p>
+                    <div class="caption">
+                        <p>"Galloping Horse"</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -115,18 +109,18 @@
     <div>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-4">
-                </div>
-                <div class="col-xs-8">
-                    <a href="www.facebook.com"><i class="fab fa-facebook"></i></a>
-                    <a href="www.twitter.com"><i class="fab fa-twitter"></i></a>
-                    <a href="www.instagram.com"><i class="fab fa-instagram"></i></a>
-                    <a href="www.linkedin.com"><i class="fab fa-linkedin"></i></a>
-                    <a href="www.youtube.com"><i class="fab fa-youtube"></i></a>
+                <div class="col-xs-6 col-xs-offset-3">
+                    <p class="icons">
+                        <a href="www.facebook.com"><i class="fab fa-facebook"></i></a>
+                        <a href="www.twitter.com"><i class="fab fa-twitter"></i></a>
+                        <a href="www.instagram.com"><i class="fab fa-instagram"></i></a>
+                        <a href="www.linkedin.com"><i class="fab fa-linkedin"></i></a>
+                        <a href="www.youtube.com"><i class="fab fa-youtube"></i></a>
+                    </p>
                 </div>
             </div>
         </div>
-        <link rel="stylesheet" href="#" type="text/css" />
     </div>
 </footer>
+
 </html>
