--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,51 +9,63 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Srisakdi" rel="stylesheet">
     <title>Colette O'Beirne</title>
 </head>
 <heading>
     <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-10">
-                    <h3 id="title-heading">Colette </br>O'Beirne </br> Studio</h3>
+                <div class="col-xs-12">
+                    <a href="index.html">
+                        <h3 id="title-heading" class="text-center">Colette </br>O'Beirne </br> Studio</h3>
+                    </a>
                 </div>
             </div>
         </div>
     </section>
     <section>
-
-        <nav class="navbar navbar-default justify-content-center">
-            <div class="container-fluid">
-                <ul class="nav navbar-nav justify-content-center">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Information</a>
+        <div class="row">
+            <div class="col-xs-12 col-xs-offset-4">
+            <div class="container-fluid" id="navcontainer">
+                <ul id="primary-nav-bar">
+                    <li>
+                        <a href="index.html">Information</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="sculptures.html">Sculptures</a>
+                    <li>
+                        <a href="sculptures.html">Sculptures</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="music.html">Music</a>
+                    <li>
+                        <a href="music.html">Music</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                    <li>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
-        </nav>
+        </div>
+        </div>
     </section>
 </heading>
 <body>
     <div class="container">
         <div class="row">
-            <div id="upper-sidebar" class="col-xs-4">
+            <div class="col-xs-4">
+                <img src="./images/IMG_1645.JPG" id="cover-image"></img>
+            </div>
+            <div class="col-xs-8">
                 <article>
                     <section>
-                        Lorem ipsum dolor sit amet.
+                        <p>Lotta Nieminen Studio is a graphic design, art direction and illustration studio creating holistic visual solutions for clients across disciplines. Passionate about finding the best tools to execute content-driven visuals, the
+                            studio works as a creative partner in all aspects branding, bringing visual identities to life through thoughtfully crafted print and digital implementations.</p>
+
+                        <p>Originally from Finland, Lotta Nieminen studied graphic design and illustration at the University of Art and Design Helsinki and the Rhode Island School of Design, before founding her New York-based studio in 2012. She has been
+                            nominated for Forbes magazine’s annual 30 Under 30 list, the Art Directors Club Young Guns award and Print magazine’s New Visual Artist, and has given talks at conferences and educational institutions across the United States
+                            and Europe.</p>
                     </section>
                 </article>
             </div>
-            <div id="upper-main-section" class="col-xs-8">
+            <div id="#" class="col-xs-12">
                 <article>
                     <section>
                         Lorem ipsum dolor sit amet.
@@ -69,19 +80,17 @@
     <div>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-4">
-
-                </div>
-                <div class="col-xs-8">
-                    <a href="www.facebook.com"><i class="fab fa-facebook"></i></a>
-                    <a href="www.twitter.com"><i class="fab fa-twitter"></i></a>
-                    <a href="www.instagram.com"><i class="fab fa-instagram"></i></a>
-                    <a href="www.linkedin.com"><i class="fab fa-linkedin"></i></a>
-                    <a href="www.youtube.com"><i class="fab fa-youtube"></i></a>
+                <div class="col-xs-6 col-xs-offset-3">
+                    <p class="icons">
+                        <a href="www.facebook.com"><i class="fab fa-facebook"></i></a>
+                        <a href="www.twitter.com"><i class="fab fa-twitter"></i></a>
+                        <a href="www.instagram.com"><i class="fab fa-instagram"></i></a>
+                        <a href="www.linkedin.com"><i class="fab fa-linkedin"></i></a>
+                        <a href="www.youtube.com"><i class="fab fa-youtube"></i></a>
+                    </p>
                 </div>
             </div>
         </div>
-
     </div>
 </footer>
 
