new images to gallery and updates to the contact page

--- a/contact.html
+++ b/contact.html
@@ -28,41 +28,55 @@
     <section>
         <div class="row">
             <div class="col-xs-12 col-xs-offset-4">
-            <div class="container-fluid" id="navcontainer">
-                <ul id="primary-nav-bar">
-                    <li>
-                        <a href="index.html">Information</a>
-                    </li>
-                    <li>
-                        <a href="sculptures.html">Sculptures</a>
-                    </li>
-                    <li>
-                        <a href="music.html">Music</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
-                </ul>
+                <div class="container-fluid" id="navcontainer">
+                    <ul id="primary-nav-bar">
+                        <li>
+                            <a href="index.html">Information</a>
+                        </li>
+                        <li>
+                            <a href="sculptures.html">Sculptures</a>
+                        </li>
+                        <li>
+                            <a href="music.html">Music</a>
+                        </li>
+                        <li>
+                            <a href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
         </div>
     </section>
 </heading>
+
 <body>
-    <div class="container-fluid">
-        <form action="[enter address]" method="post" target="_blank">
-            <fieldset>
-                <legend>Contact Us:</legend>
-                First name:<br>
-                <input type="text" name="firstname"><br> 
-                Last name:<br>
-                <input type="text" name="lastname"><br>
-                Queries:<br>
-                <input type="text" name="commentbox"/>
-                <input type="submit" value="Submit">
-            </fieldset>
-        </form>
-    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-6">
+                <h3>Sculpture</h3>
+                <p>Please contact Colette O'Beirne Studio for information on commissions, exhibitions or purchasing any of the sculptures.</p>
+                <h3>Music</h3>
+                <p>For inquiries about Colette's O'Beirne Studio Music, including any inquiries regarding upcoming live performances and gigs, please use the contact form on this page. The Studio will provide you wi</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-6">
+                <form id="contact-form" action="[enter address]" method="post" target="_blank">
+                    <fieldset>
+                        <legend>Contact Us</legend>
+                        First name:<br>
+                        <input type="text" name="firstname"><br> Last name:<br>
+                        <input type="text" name="lastname"><br> Email:
+                        <br>
+                        <input type="email" name="email"><br> Queries:
+                        <br>
+                        <input type="text" name="commentbox" />
+                        <br>
+                        <input type="submit" value="Submit">
+                    </fieldset>
+                </form>
+            </div>
+        </div>
 </body>
 <footer>
     <div>
@@ -70,11 +84,11 @@
             <div class="row">
                 <div class="col-xs-6 col-xs-offset-3">
                     <p class="icons">
-                        <a href="www.facebook.com"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/colette.obeirne.1"><i class="fab fa-facebook"></i></a>
                         <a href="www.twitter.com"><i class="fab fa-twitter"></i></a>
-                        <a href="www.instagram.com"><i class="fab fa-instagram"></i></a>
+                        <a href="www.instagram.com"><i class="https://www.instagram.com/coletteobeirne/"></i></a>
                         <a href="www.linkedin.com"><i class="fab fa-linkedin"></i></a>
-                        <a href="www.youtube.com"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.youtube.com/user/bobsinnepalshekitout"><i class="fab fa-youtube"></i></a>
                     </p>
                 </div>
             </div>
