--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
             <div class="row">
                 <div class="col-xs-6 col-xs-offset-3">
                     <p class="icons">
-                        <a href="www.facebook.com"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/colette.obeirne.1"><i class="fab fa-facebook"></i></a>
                         <a href="www.twitter.com"><i class="fab fa-twitter"></i></a>
-                        <a href="www.instagram.com"><i class="fab fa-instagram"></i></a>
+                        <a href="www.instagram.com"><i class="https://www.instagram.com/coletteobeirne/"></i></a>
                         <a href="www.linkedin.com"><i class="fab fa-linkedin"></i></a>
-                        <a href="www.youtube.com"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.youtube.com/user/bobsinnepalshekitout"><i class="fab fa-youtube"></i></a>
                     </p>
                 </div>
             </div>
