--- a/sculptures.html
+++ b/sculptures.html
@@ -28,82 +28,63 @@
     <section>
         <div class="row">
             <div class="col-xs-12 col-xs-offset-4">
-            <div class="container-fluid" id="navcontainer">
-                <ul id="primary-nav-bar">
-                    <li>
-                        <a href="index.html">Information</a>
-                    </li>
-                    <li>
-                        <a href="sculptures.html">Sculptures</a>
-                    </li>
-                    <li>
-                        <a href="music.html">Music</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
-                </ul>
+                <div class="container-fluid" id="navcontainer">
+                    <ul id="primary-nav-bar">
+                        <li>
+                            <a href="index.html">Information</a>
+                        </li>
+                        <li>
+                            <a href="sculptures.html">Sculptures</a>
+                        </li>
+                        <li>
+                            <a href="music.html">Music</a>
+                        </li>
+                        <li>
+                            <a href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
         </div>
     </section>
 </heading>
+
 <body>
-    <div id="GalleryGrid">
+    <div id="gallery-grid" class="container-fluid">
         <div class="row">
-            <div class="col-xs-4">
-                <div class="thumbnail">
-                    <a href="#">
+            <div class="col-xs-6">
+                <a href="./images/IMG_4879.JPG">
                     <img src="./images/IMG_4879.JPG" alt="bull sculpture" style="width:100%"></img>
-                </a>
-                    <div class="caption">
-                        <p>"Bull"</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-4">
-                <div class="thumbnail">
-                    <a href="#">
+                        </a>
+                <a href="./images/IMG_3040.jpg">
                     <img src="./images/IMG_3040.jpg" alt="eagle sculpture" style="width:100%"></img>
-                </a>
-                    <div class="caption">
-                        <p>"Eagle"</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-4">
-                <div class="thumbnail">
-                    <a href="#">
+                    </a>
+                <a href="./images/IMG_0541_face0.jpg">
                     <img src="./images/IMG_0541_face0.jpg" alt="face sculpture" style="width:100%"></img>
-                </a>
-                    <div class="caption">
-                        <p>"Desultory Devil"</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-4">
-                <div class="thumbnail">
-                    <a href="#">
+                    </a>
+                <a href="./images/IMG_0494_face0.jpg">
                     <img src="./images/IMG_0494_face0.jpg" alt="face sculpture" style="width:100%"></img>
-                </a>
-                    <div class="caption">
-                        <p>"Samuel Beckett"</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-4">
-                <div class="thumbnail">
-                    <a href="#">
+                    </a>
+                <a href="./images/IMG_0228_1024.jpg">
                     <img src="./images/IMG_0228_1024.jpg" alt="horse sculpture" style="width:100%"></img>
-                </a>
-                    <div class="caption">
-                        <p>"Galloping Horse"</p>
-                    </div>
-                </div>
+                    </a>
+            </div>
+            <div class="col-xs-6">
+                <a href="./images/IMG_0103.jpg">
+                    <img src="./images/IMG_0103.jpg" alt="eagle sculpture" style="width:100%"></img>
+                    </a>
+                <a href="./images/IMG_1380.jpg">
+                    <img src="./images/IMG_1380.jpg" alt="face sculpture" style="width:100%"></img>
+                    </a>
+                <a href="./images/IMG_1429_1024.jpg">
+                    <img src="./images/IMG_1429_1024.jpg" alt="face sculpture" style="width:100%"></img>
+                    </a>
+                <a href="./images/IMG_1650_1024.jpg">
+                    <img src="./images/IMG_1650_1024.jpg" alt="horse sculpture" style="width:100%"></img>
+                    </a>
             </div>
         </div>
+    </div>
 </body>
 <footer>
     <div>
@@ -111,11 +92,11 @@
             <div class="row">
                 <div class="col-xs-6 col-xs-offset-3">
                     <p class="icons">
-                        <a href="www.facebook.com"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/colette.obeirne.1"><i class="fab fa-facebook"></i></a>
                         <a href="www.twitter.com"><i class="fab fa-twitter"></i></a>
-                        <a href="www.instagram.com"><i class="fab fa-instagram"></i></a>
+                        <a href="www.instagram.com"><i class="https://www.instagram.com/coletteobeirne/"></i></a>
                         <a href="www.linkedin.com"><i class="fab fa-linkedin"></i></a>
-                        <a href="www.youtube.com"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.youtube.com/user/bobsinnepalshekitout"><i class="fab fa-youtube"></i></a>
                     </p>
                 </div>
             </div>
