--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,26 +28,27 @@
     <section>
         <div class="row">
             <div class="col-xs-12 col-xs-offset-4">
-            <div class="container-fluid" id="navcontainer">
-                <ul id="primary-nav-bar">
-                    <li>
-                        <a href="index.html">Information</a>
-                    </li>
-                    <li>
-                        <a href="sculptures.html">Sculptures</a>
-                    </li>
-                    <li>
-                        <a href="music.html">Music</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
-                </ul>
+                <div class="container-fluid" id="navcontainer">
+                    <ul id="primary-nav-bar">
+                        <li>
+                            <a href="index.html">Information</a>
+                        </li>
+                        <li>
+                            <a href="sculptures.html">Sculptures</a>
+                        </li>
+                        <li>
+                            <a href="music.html">Music</a>
+                        </li>
+                        <li>
+                            <a href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
         </div>
     </section>
 </heading>
+
 <body>
     <div class="container">
         <div class="row">
@@ -56,19 +58,39 @@
             <div class="col-xs-8">
                 <article>
                     <section>
-                        <p>Lotta Nieminen Studio is a graphic design, art direction and illustration studio creating holistic visual solutions for clients across disciplines. Passionate about finding the best tools to execute content-driven visuals, the
-                            studio works as a creative partner in all aspects branding, bringing visual identities to life through thoughtfully crafted print and digital implementations.</p>
+                        <p>Colette O'Beirne is an Irish sculptress, working in clay, ceramic and bronze. Colette takes the natural world and animal forms as the subject of many of her works. Through a delicate interplay of gesture and poise, she elicits the vital spirit latent in nature's in these biological forms.</p>
 
-                        <p>Originally from Finland, Lotta Nieminen studied graphic design and illustration at the University of Art and Design Helsinki and the Rhode Island School of Design, before founding her New York-based studio in 2012. She has been
-                            nominated for Forbes magazine’s annual 30 Under 30 list, the Art Directors Club Young Guns award and Print magazine’s New Visual Artist, and has given talks at conferences and educational institutions across the United States
-                            and Europe.</p>
+                        <p>Originally from the East Wall, Dublin, Colette O'Beirne studied sculpture at the Academy of Art San Francisco, California, before founding her Dublin-based studio in 2017. She has had her work exhibited in the Spring Exhibition of the Palace of Fine Arts in San Francisco California, and in the Los Gatos Gallery in conjunction with the Los Gatos Irish Arts Festival.</p>
+                    
+                        <p>Previously the lead singer of the "Spirit Merchants", Colette O'Beirne has also had a storied career as a singer. She performed on the Late Late Show and is tipped to win this year's "The Voice". </p>
                     </section>
                 </article>
             </div>
-            <div id="#" class="col-xs-12">
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-4">
                 <article>
                     <section>
-                        Lorem ipsum dolor sit amet.
+                        <h3>News</h3>
+                        <p>"The Godfather" was recently purchased by the San Diego Zoo Art's foundation for an undisclosed sum.</p>
+                        <p>Colette O'Beirne recently finished an apprenticeship with Guiseppe Mazzolini in Florence, Italy.</p>
+                    </section>
+                </article>
+            </div>
+            <div class="col-xs-8">
+                <article>
+                    <section>
+                        <h3>New Works</h3>
+                        <table ="new-works-table">
+                            <tr>
+                                <td><img src="./images/WhatsApp Image 2018-10-01 at 14.00.07 (1).jpeg" alt="sculpture of sabre tooth tiger" style='height: 100%; width: 100%; object-fit: contain'/>
+                                </td>
+                                <td><img src="./images/WhatsApp Image 2018-10-01 at 14.00.07 (1).jpeg" alt="sculpture of sabre tooth tiger" style='height: 100%; width: 100%; object-fit: contain'/>
+                                </td>
+                            </tr>
+                        </table>
                     </section>
                 </article>
             </div>
