index and style sheet changes

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <tr>
                                 <td><img src="./images/WhatsApp Image 2018-10-01 at 14.00.07 (1).jpeg" alt="sculpture of sabre tooth tiger" style='height: 100%; width: 100%; object-fit: contain'/>
                                 </td>
-                                <td><img src="./images/WhatsApp Image 2018-10-01 at 14.00.07 (1).jpeg" alt="sculpture of sabre tooth tiger" style='height: 100%; width: 100%; object-fit: contain'/>
+                                <td><img src="./images/WhatsApp Image 2018-10-01 at 14.00.07 (1).jpeg" alt="sculpture of sabre tooth tiger" style='height: 100%; width: 100%; object-fit: contain'/></img>
                                 </td>
                             </tr>
                         </table>
